--- a/mapper/page.html
+++ b/mapper/page.html
@@ -210,7 +210,7 @@ function curve_segment(x, y, heading, w){
   var curve = curve_geometry(ex, ey, w);
   
   initcode += "drivetrain::differential_curve dc" + dcname + "(" + ex + ", " + ey + ", axle_width);\n";
-  code += "while (robot->IsAutonomous() && robot->IsEnabled() && !drivetrain::driveto(" + drivetrain_name + ", dc" + (dcname++) + ", " + maxspeed + ", " + minspeed + ", " + lenc + ".GetRaw() / " + wconst + ", " + renc +".GetRaw() / " + wconst + ", " + curvep + ")) {\n\t/* Put something here */\n}\nreset();\n\n";
+  code += "while (robot->IsAutonomous() && robot->IsEnabled() && !drivetrain::driveto(" + drivetrain_name + ", dc" + (dcname++) + ", " + lenc + ".GetRaw() / " + wconst + ", " + renc +".GetRaw() / " + wconst + ", curve_p = " + curvep + ", max_velocity = " + maxspeed + ", min_velocity = " + minspeed + ")) {\n\t/* Put something here */\n}\nreset();\n\n";
   
   var rx = (curve.flipped ? 1 : -1) * curve.r * Math.cos(heading);
   var ry = (curve.flipped ? 1 : -1) * curve.r * Math.sin(heading);
